[tool.poetry]
name = "ocflib"
version = "2023.05.11"
description = "libraries for account and server management"
authors = ["Open Computing Facility <help@ocf.berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^23.1.0"
cached-property = "^1.5.2"
cracklib = "^2.9.6"
dnspython = "<2.4"
Jinja2 = "^3.1.2"
ldap3 = "^2.9.1"
pexpect = "^4.8.0"
pycryptodome = "^3.18.0"
PyGithub = "^1.59.1"
pymysql = "<0.10.0"
pysnmp = {git = "https://github.com/etingof/pysnmp", rev = "release-4.4.13"}
PyYAML = "^6.0.1"
redis = "^5.0.0"
requests = "^2.31.0"
SQLAlchemy = "^2.0.19"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
freezegun = "^1.2.2"
mock = "^5.1.0"
pre-commit = "<3"
pyfakefs = "<4.5.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
